--- a/aws/s3/zarf.yaml
+++ b/aws/s3/zarf.yaml
@@ -13,29 +13,34 @@ name: &common_s3_template
         - cmd: pwd
         - cmd: terraform get -update
     onDeploy:
-      before:
+      after:
         - cmd: "echo ${ZARF_VAR_NAME}-${ZARF_VAR_BUCKET_SUFFIX}"
           setVariables:
             - name: BUCKET_NAME
         - cmd: "echo ${ZARF_VAR_STATE_KEY}-${ZARF_VAR_NAME}-${ZARF_VAR_BUCKET_NAME}.tfstate"
           setVariables:
             - name: STATE_KEY_FULL
+        - cmd: "echo run/${ZARF_VAR_BUCKET_SUFFIX}"
+          setVariables:
+            - name: UNIQUE_PATH 
         - cmd: |
+            cd ${ZARF_VAR_UNIQUE_PATH}
             terraform init -force-copy \
             -backend-config="bucket=${ZARF_VAR_STATE_BUCKET_NAME}" \
             -backend-config="key=${ZARF_VAR_STATE_KEY_FULL}" \
             -backend-config="region=${ZARF_VAR_REGION}" \
             -backend-config="dynamodb_table=${ZARF_VAR_STATE_DYNAMODB_TABLE_NAME}"
-        - cmd: "terraform plan && sleep 15"
-        - cmd: "terraform apply -auto-approve"
+            terraform plan
+            sleep 15
+            terraform apply -auto-approve
       after:
-        - cmd: "terraform output -raw s3_bucket"
+        - cmd: "cd ${ZARF_VAR_UNIQUE_PATH} && terraform output -raw s3_bucket"
           setVariables:
             - name: S3_BUCKET
-        - cmd: "terraform output -raw aws_region"
+        - cmd: "cd ${ZARF_VAR_UNIQUE_PATH} && terraform output -raw aws_region"
           setVariables:
             - name: S3_AWS_REGION
-        - cmd: "terraform output -raw irsa_role"
+        - cmd: "cd ${ZARF_VAR_UNIQUE_PATH} && terraform output -raw irsa_role"
           setVariables:
             - name: S3_ROLE_ARN
       onRemove:
