feat: Updated s3 bucket to use correct serviceAccount info
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -215,6 +215,7 @@ components:
         valuesFiles:
         - ../values/aws-istio.yaml
         - ../values/aws-loki.yaml
+        - ../values/aws-velero.yaml
     actions:
       onDeploy:
         before:
