--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -168,6 +168,7 @@ components:
         before:
           - cmd: |
               ./zarf tools kubectl patch helmrelease -n bigbang bigbang --type=merge -p '{"spec":{"suspend":true}}'
+              ./zarf tools kubectl delete helmrelease -n bigbang velero --ignore-not-found
               ./zarf tools kubectl delete helmrelease -n bigbang istio --ignore-not-found
               ./zarf tools kubectl delete helmrelease -n bigbang istio-operator --ignore-not-found
               ./zarf tools kubectl delete helmrelease -n bigbang monitoring --ignore-not-found
