Replace EKS with k3d in dubbd-aws install workflow

--- a/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
+++ b/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
@@ -23,6 +23,6 @@ jobs:
         uses: ./.github/workflows/test-dubbd-aws-install.yaml
         secrets: inherit
 
-    test-upgrade:
-        uses: ./.github/workflows/test-dubbd-aws-upgrade.yaml
-        secrets: inherit
+    # test-upgrade:
+    #     uses: ./.github/workflows/test-dubbd-aws-upgrade.yaml
+    #     secrets: inherit
