feat: updating external-dns TF & dubbd-aws [ci skip]
Co-authored-by: Will C <wirewc@users.noreply.github.com>
Co-authored-by: Noah <noahpb@users.noreply.github.com>
Co-authored-by: Micah Nagel <mjnagel@users.noreply.github.com>

--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -39,6 +39,9 @@ variables:
   description: "Provide a means to force destroy the Loki storage (S3) bucket even if it contains data"
   default: "false"
 
+- name: HOSTED_ZONE_ID
+  description: "Hosted zone ID of the DNS zone"
+
 components:
   - name: download-terraform
     required: true
@@ -135,6 +138,80 @@ components:
             dir: run/loki
             setVariables:
               - name: LOKI_S3_ROLE_ARN
+  - name: route53-policy-pre
+    required: true
+    actions:
+     onDeploy:
+      before:
+        - cmd: echo "route53-policy"
+          setVariables:
+            - name: STATE_KEY_PREFIX
+        - cmd: "echo ${ZARF_STATE_KEY_PREFIX}-${ZARF_VAR_STATE_KEY}"
+          setVariables:
+            - name: STATE_KEY
+  - name: route53-policy-module
+    required: true
+    actions:
+      onCreate:
+        before:
+          - cmd: terraform get -update
+            dir: ../route53-policy
+    files:
+    - source: ../route53-policy/.terraform
+      target: run/route53-policy/.terraform
+    - source: ../route53-policy/main.tf
+      target: run/route53-policy/main.tf
+    - source: ../route53-policy/variables.tf
+      target: run/route53-policy/variables.tf
+    - source: ../route53-policy/output.tf
+      target: run/route53-policy/output.tf
+    - source: ../route53-policy/terraform.tfvars
+      target: run/route53-policy/terraform.tfvars
+  - name: execute-route53-policy-terraform
+    required: true
+    actions:
+      onDeploy:
+        before:
+          - cmd: "test -d ./route53-policy/ && chmod -R ugo+rwx ./route53-policy/ || echo $?"
+            dir: run
+          - cmd: |
+              terraform init -force-copy \
+              -backend-config="bucket=${ZARF_VAR_STATE_BUCKET_NAME}" \
+              -backend-config="key=${ZARF_VAR_STATE_KEY}" \
+              -backend-config="region=${ZARF_VAR_REGION}" \
+              -backend-config="dynamodb_table=${ZARF_VAR_STATE_DYNAMODB_TABLE_NAME}
+            dir: run/route53-policy
+          - cmd: "terraform plan"
+            dir: run/route53-policy
+          - cmd: sleep 15 #time to review
+          - cmd: "terraform apply -auto-approve"
+            dir: run/route53-policy
+      onRemove:
+        before:
+          - cmd: |
+              if [ -d "run/route53-policy" ]; then
+                cd run/route53-policy
+                if [ "$(terraform output force_destroy)" = true ]; then
+                  terraform destroy -auto-approve
+                else
+                  echo "Skipping remove, force_destroy is set to false"
+                fi
+              else
+                echo "Cannot remove: run/route53-policy directory does not exist"
+              fi
+  - name: route53-policy-outputs
+    required: true
+    actions:
+      onDeploy:
+        after:
+          - cmd: "terraform output -raw route53_role_arn"
+            dir: run/route53-policy
+            setVariables:
+              - name: ROUTE53_ROLE_ARN
+  - name: external-dns
+    required: true
+    import:
+      path: ../external-dns
   - name: load-certs
     required: true
     import:
