fix: update renovate file match rules [ci skip]

--- a/renovate.json
+++ b/renovate.json
@@ -42,14 +42,14 @@
   ],
   "regexManagers": [
     {
-      "fileMatch": ["./.+\\.ya?ml$"],
+      "fileMatch": [".*\\.ya?ml$"],
       "matchStrings": [
         "# renovate: datasource=docker( versioning=(?<versioning>.*?))?\n\\s*-\\s+(?<depName>[^:]+):(?<currentValue>.*)"
       ],
       "datasourceTemplate": "docker"
     },
     {
-      "fileMatch": ["./.+\\.yaml$"],
+      "fileMatch": [".*\\.ya?ml$"],
       "matchStrings": [
         "registryUrl=(?<registryUrl>.*?)\n *chart: (?<depName>.*?)\n *version: (?<currentValue>.*)\n",
         "# renovate: datasource=helm\n .*- name: (?<depName>.*?)\n *url: (?<registryUrl>.*?)\n *version: (?<currentValue>.*)\n"
@@ -57,7 +57,7 @@
       "datasourceTemplate": "helm"
     },
     {
-      "fileMatch": ["./.+\\.ya?ml$"],
+      "fileMatch": [".*\\.ya?ml$"],
       "matchStrings": [
         "# renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)( versioning=(?<versioning>.*?))?( registryUrl=(?<registryUrl>.*?))?\\s.*?_version:\\s*['\"](?<currentValue>.*)['\"]\\s"
       ],
