--- a/aws/values/aws-external-dns.yaml
+++ b/aws/values/aws-external-dns.yaml
@@ -22,4 +22,4 @@ extraArgs:
 serviceAccount:
   create: true
   annotations:
-    eks.amazonaws.com/role-arn: "###ZARF_VAR_ARN###"
+    eks.amazonaws.com/role-arn: "###ZARF_VAR_ROUTE53_ROLE_ARN###"
