fix: add external-dns ns manifest [skip ci]
Co-authored-by: Micah Nagel <mjnagel@users.noreply.github.com>
Co-authored-by: Will C <wirewc@users.noreply.github.com>
Co-authored-by: Noah <noahpb@users.noreply.github.com>

--- a/aws/external-dns/zarf.yaml
+++ b/aws/external-dns/zarf.yaml
@@ -35,3 +35,7 @@ components:
     images:
       # renovate: datasource=docker
       - "registry1.dso.mil/ironbank/external-dns:v0.13.4"
+    manifests:
+      - name: k8s-manifests
+        files:
+          - ../k8s-manifests/aws-external-dns-ns.yaml
