fix: add e-dns k8s manifests component [ci skip]

--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -204,6 +204,10 @@ components:
             dir: run/route53-policy
             setVariables:
               - name: ROUTE53_ROLE_ARN
+  - name: external-dns-k8s-manifests
+    required: true
+    import:
+      path: ../external-dns
   - name: external-dns-chart
     required: true
     import:
