--- a/aws/k8s-manifests/aws-external-dns-ns.yaml
+++ b/aws/k8s-manifests/aws-external-dns-ns.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
+    app.kubernetes.io/part-of: dubbd-aws
     app.kubernetes.io/managed-by: zarf
     istio-injection: enabled
     kubernetes.io/metadata.name: external-dns
