ci: update changelog format

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,6 +4,11 @@
       "release-type": "simple",
       "draft": false,
       "changelog-path": "CHANGELOG.md",
+      "changelog-sections": [
+        { "type": "feat", "section": "Features", "hidden": false },
+        { "type": "fix", "section": "Bug Fixes", "hidden": false },
+        { "type": "chore", "section": "Miscellaneous", "hidden": false }
+      ],
       "versioning": "always-bump-patch",
       "extra-files": [
         "aws/dubbd-aws/zarf.yaml",
