ci: update refs to external-dns things [ci skip]
Co-authored-by: Will C <wirewc@users.noreply.github.com>
Co-authored-by: Noah <noahpb@users.noreply.github.com>
Co-authored-by: Micah Nagel <mjnagel@users.noreply.github.com>

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,6 +7,7 @@
       "versioning": "always-bump-patch",
       "extra-files": [
         "aws/dubbd-aws/zarf.yaml",
+        "aws/external-dns/zarf.yaml",
         "defense-unicorns-distro/zarf.yaml",
         "k3d/zarf.yaml"
       ]
