--- a/.github/workflows/test-dubbd-aws-upgrade.yaml
+++ b/.github/workflows/test-dubbd-aws-upgrade.yaml
@@ -82,6 +82,7 @@ jobs:
             --set state_bucket_name="uds-ci-state-bucket" \
             --set state_key="tfstate/ci/upgrade/${SHA:0:7}-dubbd-aws" \
             --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
+            --set hosted_zone_id="UDS0CI0ZONE0ID" \
             --confirm
         working-directory: aws/dubbd-aws
         timeout-minutes: 60
@@ -97,6 +98,7 @@ jobs:
             --set state_bucket_name="uds-ci-state-bucket" \
             --set state_key="tfstate/ci/upgrade/${SHA:0:7}-dubbd-aws" \
             --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
+            --set hosted_zone_id="UDS0CI0ZONE0ID" \
             --confirm
         working-directory: aws/dubbd-aws
         timeout-minutes: 60
