--- a/.github/workflows/test-uds-core-aws-install.yaml
+++ b/.github/workflows/test-uds-core-aws-install.yaml
@@ -77,6 +77,7 @@ jobs:
             --set state_bucket_name="uds-ci-state-bucket" \
             --set state_key="tfstate/ci/install/${SHA:0:7}-uds-core-aws.tfstate" \
             --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
+            --set hosted_zone_id="UDS0CI0ZONE0ID" \
             --confirm
         working-directory: aws/uds-core-aws
         timeout-minutes: 60
