--- a/aws/dubbd-aws/zarf-config.yaml
+++ b/aws/dubbd-aws/zarf-config.yaml
@@ -11,28 +11,28 @@ package:
   deploy:
     set:
       # -- Domain name for the EKS cluster
-      domain: dns-bigbang.dev
+      domain: bigbang.dev
       # -- TLS key
-      key_file: _wildcard.dns-bigbang.dev-key.pem
+      key_file: bigbang.dev.key
       # -- TLS cert
-      cert_file: _wildcard.dns-bigbang.dev.pem
+      cert_file: bigbang.dev.cert
       # -- Name of the EKS cluster
-      name: "bigbang-dns"
+      name: "big-bang-aws"
       # -- Name of the Route53 hosted DNS zone
       hosted_zone_id: "UDS0DEV0ZONE0ID"
       # -- Name of existing Terraform state bucket
-      state_bucket_name: oursler-test-state-bucket
+      state_bucket_name: uds-dev-state-bucket
       # -- Key path to Terraform state file within the bucket
-      state_key: tfstate/dns-bigbang.tfstate
+      state_key: tfstate/dev/uds-dev-state-bucket.tfstate
       # -- Name of DynamoDB table used for Terraform state locking
-      state_dynamodb_table_name: oursler-test-state-dynamodb
+      state_dynamodb_table_name: uds-dev-state-dynamodb
       # -- AWS region
-      region: us-east-2
+      region: us-west-2
       # -- Provision a private/internal load balancer for the admin ingress gateway, if false a public load balancer will be provisioned
-      private_admin_lb: false
+      private_admin_lb: true
       # -- Provision a private/internal load balancer for the tenant ingress gateway, if false a public load balancer will be provisioned
-      private_tenant_lb: false
+      private_tenant_lb: true
       # -- Bring your own kms key, if omitted a key will be created with an alias prefix of "<cluster name>-loki-"
       #loki_kms_key_arn: "arn:aws:kms:us-west-2:000000000000:key/mrk-0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a"
       # -- If set to true, delete the S3 bucket and corresponding KMS key associated with the Loki bucket
-      loki_force_destroy: "true"
+      #loki_force_destroy: "true"
