ci: modify workflow rules to match better

--- a/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
+++ b/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
@@ -7,14 +7,16 @@ on:
     paths-ignore:
       - ".gitignore"
       - "LICENSE"
-      - "**.md"
-      - "**.json"
+      - "**/*.md"
+      - "**/*.json"
+      - "**/*.png"
+      - "**/*.svg"
       - "aws/uds-core-aws/**"
       - "aws/cloudtrail/**"
       - "k3d/**"
-      - ".github/workflows/**k3d**.y*ml"
-      - ".github/workflows/**cloudtrail**.y*ml"
-      - ".github/workflows/**uds**.y*ml"
+      - ".github/workflows/*k3d*.y*ml"
+      - ".github/workflows/*cloudtrail*.y*ml"
+      - ".github/workflows/*uds*.y*ml"
 
   workflow_call:
 
