--- a/.github/workflows/ci-on-pull-request-k3d.yaml
+++ b/.github/workflows/ci-on-pull-request-k3d.yaml
@@ -7,14 +7,14 @@ on:
     paths-ignore:
       - ".gitignore"
       - "LICENSE"
-      - "**.md"
-      - "**.json"
-      - "**.png"
-      - "**.svg"
+      - "**/*.md"
+      - "**/*.json"
+      - "**/*.png"
+      - "**/*.svg"
       - "aws/**"
-      - ".github/workflows/**aws**.y*ml"
-      - ".github/workflows/**cloudtrail**.y*ml"
-      - ".github/workflows/**uds**.y*ml"
+      - ".github/workflows/*aws*.y*ml"
+      - ".github/workflows/*cloudtrail*.y*ml"
+      - ".github/workflows/*uds*.y*ml"
 
 jobs:
   test-release:
