--- a/.github/workflows/ci-on-pull-requests-cloudtrail.yaml
+++ b/.github/workflows/ci-on-pull-requests-cloudtrail.yaml
@@ -7,7 +7,8 @@ on:
       - main
     paths:
       - "aws/cloudtrail/**"
-      - "!*.md"
+      - "!**/*.md"
+      - ".github/workflows/ci-on-pull-requests-cloudtrail.yaml"
 
 permissions:
   id-token: write
