ci: more globbing

--- a/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
+++ b/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
@@ -11,9 +11,9 @@ on:
       - "**/*.json"
       - "**/*.png"
       - "**/*.svg"
-      - "aws/uds-core-aws/**"
-      - "aws/cloudtrail/**"
-      - "k3d/**"
+      - "aws/uds-core-aws/**/*"
+      - "aws/cloudtrail/**/*"
+      - "k3d/**/*"
       - ".github/workflows/*k3d*.y*ml"
       - ".github/workflows/*cloudtrail*.y*ml"
       - ".github/workflows/*uds*.y*ml"
