--- a/.github/workflows/aws-nuke/aws-nuke-ci-config.yaml
+++ b/.github/workflows/aws-nuke/aws-nuke-ci-config.yaml
@@ -9,7 +9,15 @@ account-blocklist:
   - "999999999999" # production
 
 accounts:
-  248783118822: {}
+  248783118822:
+    filters:
+      S3Bucket:
+        - property: "tag:nuke"
+          value: "DO-NOT-DELETE"
+      S3Object:
+        - property: Key
+          type: contains
+          value: "tfstate"
 
 resource-types:
   # only nuke these three resources
