--- a/.github/workflows/aws-nuke/aws-nuke-ci.yaml
+++ b/.github/workflows/aws-nuke/aws-nuke-ci.yaml
@@ -17,6 +17,7 @@ jobs:
           role-duration-seconds: 21600
 
       - name: Download aws-nuke
+        # renovate: datasource=github-tags depName=rebuy-de/aws-nuke versioning=semver
         run: wget -c https://github.com/rebuy-de/aws-nuke/releases/download/v2.23.0/aws-nuke-v2.23.0-linux-amd64.tar.gz -O - | tar xz
 
       - name: Run aws-nuke
