--- a/.github/workflows/test-dubbd-aws-install.yaml
+++ b/.github/workflows/test-dubbd-aws-install.yaml
@@ -72,7 +72,7 @@ jobs:
           echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
 
           zarf package deploy zarf-package-*.tar.zst \
-            --set loki_force_destroy=true \
+            --set ephemeral=true \
             --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
             --set state_bucket_name="uds-ci-state-bucket" \
             --set state_key="tfstate/ci/install/${SHA:0:7}-dubbd-aws.tfstate" \
