--- a/aws/dubbd-aws/zarf-config.yaml
+++ b/aws/dubbd-aws/zarf-config.yaml
@@ -30,7 +30,9 @@ package:
       private_admin_lb: true
       # -- Provision a private/internal load balancer for the tenant ingress gateway, if false a public load balancer will be provisioned
       private_tenant_lb: true
+      # -- If set to true, force delete all resources on removal (i.e. loki S3 bucket, PVCs, etc)
+      ephemeral: false
       # -- Bring your own kms key, if omitted a key will be created with an alias prefix of "<cluster name>-loki-"
       #loki_kms_key_arn: "arn:aws:kms:us-west-2:000000000000:key/mrk-0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a"
-      # -- If set to true, delete the S3 bucket and corresponding KMS key associated with the Loki bucket
+      # -- If set to true, delete the S3 bucket and corresponding KMS key associated with the Loki bucket. Overrides ephemeral setting.
       #loki_force_destroy: "true"
