--- a/aws/uds-core-aws/zarf-config.yaml
+++ b/aws/uds-core-aws/zarf-config.yaml
@@ -43,7 +43,9 @@ package:
       public_subnets: subnet-04469f93c6f962949,subnet-04d87e6a555915c79,subnet-061e0c1827bd519b0
       # -- Allow public access to cluster
       cluster_endpoint_public_access: false
+      # -- If set to true, force delete all resources on removal (i.e. loki S3 bucket, PVCs, etc)
+      ephemeral: false
       # -- Bring your own kms key, if omitted a key will be created with an alias prefix of "<cluster name>-loki-"
       #loki_kms_key_arn: "arn:aws:kms:us-west-2:000000000000:key/mrk-0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a"
-      # -- If set to true, delete the S3 bucket and corresponding KMS key associated with the Loki bucket
+      # -- If set to true, delete the S3 bucket and corresponding KMS key associated with the Loki bucket. Overrides ephemeral setting.
       #loki_force_destroy: "true"
