--- a/aws/uds-core-aws/zarf.yaml
+++ b/aws/uds-core-aws/zarf.yaml
@@ -37,9 +37,11 @@ variables:
     description: "Provision a private/internal load balancer for the tenant ingress gateway"
     default: "true"
 
-  - name: LOKI_FORCE_DESTROY
-    description: "Provide a means to force destroy the Loki storage (S3) bucket even if it contains data"
+  - name: EPHEMERAL
+    description: "Set whether the cluster should be considered ephemeral - if true all resources will be force destroyed on removal"
     default: "false"
+  - name: LOKI_FORCE_DESTROY
+    description: "Provide a means to force destroy the Loki storage (S3) bucket even if it contains data, overrides ephemeral setting"
 
   - name: VPC_CIDR
     description: "VPC CIDR block"
@@ -59,6 +61,10 @@ variables:
     default: "false"
 
 components:
+  - name: set-ephemeral
+    required: true
+    import:
+      path: ../dubbd-aws
   - name: download-terraform
     required: true
     actions:
