fix: allow aws calico with kyverno
Co-authored-by: Noah <noahpb@users.noreply.github.com>

--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -222,6 +222,7 @@ components:
         version: "###ZARF_PKG_TMPL_BIGBANG_VERSION###"
         valuesFiles:
         - ../values/aws-istio.yaml
+        - ../values/aws-kyverno.yaml
         - ../values/aws-loki.yaml
     actions:
       onDeploy:
