--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -183,6 +183,7 @@ components:
               ./zarf tools kubectl delete helmrelease -n bigbang kyverno-policies --ignore-not-found
               ./zarf tools kubectl delete helmrelease -n bigbang kyverno --ignore-not-found
               ./zarf tools kubectl delete validatingwebhookconfigurations.admissionregistration.k8s.io kyverno-policy-validating-webhook-cfg kyverno-resource-validating-webhook-cfg --ignore-not-found
+              ./zarf tools kubectl delete mutatingwebhookconfiguration.admissionregistration.k8s.io -l webhook.kyverno.io/managed-by=kyverno --ignore-not-found
               ./zarf tools kubectl delete helmrelease -n bigbang kiali --ignore-not-found
               ./zarf tools kubectl delete helmrelease -n bigbang metrics-server --ignore-not-found
               ./zarf tools kubectl delete apiservices.apiregistration.k8s.io -l helm.toolkit.fluxcd.io/namespace=bigbang,helm.toolkit.fluxcd.io/name=metrics-server --ignore-not-found
