--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -25,7 +25,7 @@ variables:
   description: "This file contains the key for the ingress gateways"
   prompt: false
 - name: EXEMPT_NAMESPACES
-  description: "Regex of namespaces to be exempt from cluster policies"
+  description: "List of namespaces to be exempt from cluster policies (must contain zarf)"
   default: '[ "zarf" ]'
 - name: APPROVED_REGISTRIES
   description: "Regex of approved registries to allow in cluster"
